@@ -113,6 +113,8 @@ typedef struct _FmConfigClass       FmConfigClass;
  * @only_user_templates: show only user defined templates in 'Create...' menu
  * @template_run_app: run default application after creation from template
  * @template_type_once: use only one template of each MIME type
+ * @modules_blacklist: list of modules (mask in form "type:name") to never load
+ * @modules_whitelist: list of excemptions from @modules_blacklist
  */
 struct _FmConfig
 {
@@ -159,6 +161,9 @@ struct _FmConfig
     gboolean only_user_templates;
     gboolean template_run_app;
     gboolean template_type_once;
+
+    gchar **modules_blacklist;
+    gchar **modules_whitelist;
     /*< private >*/
     gpointer _reserved1; /* reserved space for updates until next ABI */
     gpointer _reserved2;
